<resources>
    <string name="app_name">Klik Sembuh</string>
    <string name="action_settings">Pengaturan</string>
    <string name="title_activity_term_and_policy">Syarat dan Ketentuan</string>
    <string name="title_activity_login">Login</string>
    <string name="apicloud">http://cloud.basajans.com:8868/BS.HealthCare.Application</string>
    <string name="apibasajans">http://basajans/klikkembuhapi</string>
    <string name="title_activity_register">Daftar Baru</string>
    <string name="title_activity_forgot_password">Lupa Password</string>
    <string name="title_activity_verification">Verifikasi</string>
    <string name="title_activity_hospitallist">Sabtu, 10 Desember 2016</string>
    <string name="title_activity_reset_passwoord" translatable="false">Reset Password</string>

    <!-- Strings related to Welcome Screen -->
    <string name="screen_title">CARI INSTANSI KESEHATAN</string>
    <string name="screen_subtitile">Tentukan lokasi instansi kesehatan di dekat anda, rencanakan jadwal berobat anda, dan Pilih instansi kesehatan yang anda inginkan.</string>
    <string name="screen_title2">BUAT JANJI DENGAN DOKTER</string>
    <string name="screen_subtitile2">Pilih layanan kesehatan dan dokter spesialis sesuai yang anda inginkan, serta tentukan waktu kunjungan anda.</string>
    <string name="screen_title3">DAPATKAN PELAYANAN KESEHATAN</string>
    <string name="screen_subtitile3">Datang ke lokasi sesuai waktu yang anda tentukan, serta dapatkan pelayanan kesehatan dari tenaga medis profesional tanpa harus mengantri lama.</string>

    <!-- Strings related to login -->
    <string name="forgot_password">Masukan alamat email
        atau no. handphone anda dan kami akan mengirimkan instruksi untuk mengganti password.</string>
    <string name="prompt_email">Email</string>
    <string name="kode_verifikasi">Kode verifikasi dikirimkan melalui sms</string>
    <string name="ketentuan">Ketentuan Penggunaan</string>
    <string name="lbl_kode_verify">Kode Verifikasi</string>
    <string name="lbl_atau">Atau</string>
    <string name="ketentuan1">Dengan mengunduh, memasang, dan/atau menggunakan
Aplikasi KLIKSEMBUH("Aplikasi"), Anda setuju bahwa
telah membaca, memahami, menerima dan menyetujui ketentuan penggunaan ini
("Ketentuan Penggunaan"). Ketentuan Penggunaan ini merupakan susatu perjanjian
sah antara Anda dan PT KLIKSEMBUH Indonesia dan layanan dan Aplikasi
(sebagaimana didefinisikan dibawah ini) berlaku pada kunjungan dan
penggunaan anda pada situs web kamu di www.kliksembuh.com("Situs Web").</string>
    <string name="ketentuan2">Silahkan membatalkan akun Anda (jika Anda telah mendaftar untuk aplikasi)
dan secara permanen menghapus aplikasi dari perangkat anda jika anda tidak setuju
atau tidak ingin masuk kedalam ketentuan penggunaan.
</string>
    <string name="ketentuan3">MOHON Anda MEMERIKSA KETENTUAN PENGGUNAAN
DAN KEBIJAKAN PRIVASI KAMI DENGAN SEKSAMA SEBELUM MENGUNDUH APLIKASI ATAU
MENGGUNAKAN LAYANAN KAMI UNTUK PERTAMA KALI.</string>
    <string name="prompt_password">Password</string>
    <string name="forgot_password_text"><u>Lupa Password?</u></string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="first_name">Nama Depan</string>
    <string name="promo">Kirimkan Saya Penawaran dan Promo</string>
    <string name="last_name">Nama Belakang</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_forgot_password">Reset Password</string>
    <string name="verify">Verify</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_create_account">Buat Akun</string>
    <string name="action_search">Search</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_myappointment">History Buat Janji</string>
    <string name="action_sign_in_facebook">Log In with Facebook</string>
    <string name="action_already_login">Sudah punya akun? Login</string>
    <string name="action_sign_in_google">Log In with Google+</string>
    <string name="error_invalid_email">Email tidak valid.</string>
    <string name="error_invalid_password">Password Minimal 8 Karakter.</string>
    <string name="error_incorrect_password">email atau password salah.</string>
    <string name="error_field_required">Tidak boleh kosong.</string>
    <string name="errro_firstname_ivalid">Nama depan minimal 2 huruf!</string>
    <string name="errro_lastname_ivalid">Nama belakang minimal 3 huruf!</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_appointment_detail">Map</string>

    <!--facebook-->
    <string name="facebook_app_id">633914953464978</string>

    <!--validation on TextView-->
    <string name="default_required_validation_message">This field is required.</string>
    <string name="default_required_length_message_min_max">The input must have length between %1$d
        and %2$d.</string>
    <string name="default_required_length_message_min">The input length must be greater than
        or equal to %1$d.</string>
    <string name="default_required_length_message_max">The input length must be less than or
        equal to %1$d.</string>
    <string name="default_regex_validation_message">The field value does not match the
        required format.</string>
    <string name="snoozing">snoozing</string>
    <string name="done_snoozing">done_snoozing</string>
    <string name="notification">notification</string>
    <string name="ping">ping</string>
    <string name="snooze" />
    <string name="timer_start">timer_start</string>
    <string name="sleep_error">sleep_error</string>
    <string name="timer_finished">timer_finished</string>
    <string name="error_invalid_confirm_password">Konfirmasi password tidak sama</string>
    <string name="error_invalid_confirm_password_not_null">Tidak boleh kosong</string>
    <string name="error_invalid_nohp">Minimal 7 angka</string>
    <string name="error_invalid_hp">No HP tidak valid.</string>
    <string name="not_null">Tidak boleh kosong.</string>
    <string name="error_active_code">Minimal 4 karakter</string>

    <string-array name="specialty_name">
        <item>Dokter Umum</item>
    </string-array>

    <string-array name="day_name">
        <item>Senin</item>
        <item>Selasa</item>
        <item>Rabu</item>
        <item>Kamis</item>
        <item>Jumat</item>
        <item>Sabtu</item>
        <item>Minggu</item>
    </string-array>

    <string-array name="status_patient">
        <item>Pribadi</item>
        <item>Suami / Istri</item>
        <item>Anak 1</item>
        <item>Anak 2</item>
        <item>Lainnya</item>
    </string-array>

    <string-array name="insurance_name">
        <item>BPJS</item>
        <item>AXA Mandiri</item>
        <item>Zurich</item>
        <item>Sunlife</item>
        <item>Prudential</item>
    </string-array>

    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <string name="checkin">Checkin</string>
    <string name="title_activity_list_map">Dokter Umum di Bogor Utara</string>
    <string name="simpan">Simpan</string>
    <string name="namadepan">Nama Depan</string>
    <string name="namabelakang">Nama Belakang</string>
    <string name="nohp">No. Hp</string>
    <string name="pernafasan">Tekanan Pernafasan</string>
    <string name="nadi">Denyut Nadi</string>
    <string name="suhutubuh">Suhu Tubuh</string>
    <string name="darah">Tekanan Darah</string>
    <string name="Datadiri">Data Diri</string>
    <string name="error_length">No HP tidak valid</string>
    <string name="error_active_code_expiret">kode verifikasi tidak berlaku atau salah.</string>
    <string name="error_active_code_kirim">kode sudah tidak berlaku</string>
    <string name="loading">Loading…</string>

    <!-- Strings related to Booking Activity -->
    <string name="ketentuan_booking">Silahkan pilih hari, tanggal, dan waktu yang anda inginkan untuk melakukan appointment.</string>

    <!-- Strings related to Search Activity -->
    <string name="search_hint">Cari lokasi klinik, rumah sakit terdekat Anda</string>
    <string name="search_hint_spec">Cari dokter umum, dokter spesialis terdekat Anda</string>

    <!-- Strings related to Facility Setting-->
    <string name="lbl_facility">Fasilitas Lainnya</string>

    <!-- Strings related to Reminder Setting-->
    <string name="lbl_reminder">Pengingat Minum Obat</string>
    <string name="lbl_addreminder">Tambah Pengingat Minum Obat</string>

    <!-- Strings related to Setting Profile Nav -->
    <string name="email_nkontak">Email &amp; Kontak</string>
    <string name="pengaturan_email">Pengaturan E-Mail &amp; Kontak</string>
    <string name="pengaturan_profil">Profil Pasien</string>
    <string name="tambah_profil_pasien">Tambah Data Profil Pasien</string>
    <string name="pengaturan_password">Password</string>
    <string name="pengaturan_base">Pengaturan</string>
    <string name="string_label_formPasien">Data ini akan digunakan sebagai data pasien bagi instansi kesehatan, mohon isikan dengan benar.</string>
    <string name="string_feedback">*Tolong masukkan nomor appointment jika isu ini terkait dengan pelayanan Rumah Sakit.</string>

    <!-- Strings related to Vital Sign-->
    <string name="vitalsign">Ubah Vital Sign</string>
    <string name="lbl_historyVitalSign">History Vital Sign</string>
    <string name="lbl_tekDarah">Tekanan Darah (mmHg)</string>
    <string name="lbl_suhu">Suhu Tubuh ºC</string>
    <string name="lbl_denyutNadi">Denyut Nadi (Denyut/Min)</string>
    <string name="lblPernafasan">Pernafasan (Frek/Min)</string>
    <string name="pilih_hari">Pilih Hari</string>

    <!--String copyright-->
    <string name="copyright">Copyright © 2017 KlikSembuh</string>


</resources>
