<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:weightSum="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="@color/blue"
            android:id="@+id/tvvitalsign"
            android:ems="10"
            android:textStyle="bold"
            android:text="@string/vitalsign"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/tvtekanandarah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/darah"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/tvsuhu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/suhutubuh"
                android:imeOptions="actionUnspecified"
                android:textAlignment="viewStart"
                app:pet_disableIconAlpha="true"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/tvnadi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/nadi"
                android:imeOptions="actionUnspecified"
                android:textAlignment="viewStart"
                app:pet_disableIconAlpha="true"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/tvpernafasan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/pernafasan"
                android:imeOptions="actionUnspecified"
                android:textAlignment="viewStart"
                app:pet_disableIconAlpha="true"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <Button
                android:id="@+id/btnsimpanvitalsign_detail"
                style="@style/MyCustomTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/simpan"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:background="@drawable/shape"
                android:backgroundTint="@color/login_color"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>